# santorini

./: Cargo.toml
src/: main.rs  sim.rs  weights.json
