[package]
name = "santorini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
lazy_static = "1.4.0"
minimax = "0.5.2"
rand = "0.8.5"
random-integer = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
debug = true
